--- a/polybar.config.ini
+++ b/polybar.config.ini
@@ -25,15 +25,16 @@ secondary = #8ABEB7
 alert = #A54242
 disabled = #707880
 
-[bar/example]
+[section/base]
 width = 100%
 height = 20pt
 radius = 3
-monitor = DP-4
-monitor-fallback = HDMI-0
 
 tray-spacing = 16pt
 tray-position = right
+
+modules-left = xworkspaces xwindow
+modules-right = pulseaudio xkeyboard memory cpu wlan eth systray date
 
 bottom = true
 
@@ -57,10 +58,7 @@ separator-foreground = ${colors.disabled}
 
 font-0 = JetBrains Mono Nerd Font:size=11;1
 
-modules-left = xworkspaces xwindow
-modules-right = pulseaudio xkeyboard memory cpu wlan eth systray date
-
-cursor-click = pointer
+cursor-click = pointe
 cursor-scroll = ns-resize
 
 enable-ipc = true
@@ -68,6 +66,14 @@ enable-ipc = true
 ; wm-restack = generic
 ; wm-restack = bspwm
 wm-restack = i3
+
+[bar/primary]
+inherit = section/base
+monitor = DP-4
+
+[bar/secondary]
+inherit = section/base
+monitor = HDMI-0
 ; override-redirect = true
 
 ; This module is not active by default (to enable it, add it to one of the
@@ -82,8 +88,6 @@ wm-restack = i3
 type = internal/tray
 
 format-margin = 8pt
-
-
 
 
 [module/xworkspaces]
@@ -104,6 +108,7 @@ label-urgent-padding = 1
 label-empty = %name%
 label-empty-foreground = ${colors.disabled}
 label-empty-padding = 1
+
 
 [module/xwindow]
 type = internal/xwindow
@@ -137,6 +142,7 @@ type = internal/xkeyboard
 blacklist-0 = num lock
 
 label-layout = %layout%
+label-variant = %variant%
 label-layout-foreground = ${colors.primary}
 
 label-indicator-padding = 2
