remove polybar, add rofi

--- a/picom.conf
+++ b/picom.conf
@@ -106,7 +106,7 @@ blur: {
 	method = "dual_kawase";
 	size = 12;
 	deviation = false;
-	strength = 5;
+	strength = 4;
 }
 
 # Blur background of semi-transparent / ARGB windows.
@@ -120,7 +120,7 @@ blur-background = true
 #    blur-background
 #
 # Default: false
-# blur-background-frame = true
+blur-background-frame = true
 
 # Use fixed blur strength rather than adjusting according to window opacity.
 #
